# PhoLinuxHelpers

./: .gitignore  .gitmodules  README.md  connection.yml  perform_mount_all_cloud_drives.sh  pyproject.toml
.cursor/plans/: ondemand_vnc_tunnel_helper_df429503.plan.md
notes/: 2024-04-02_macOS SSHFS Notes.md  dnf_history_backup_20230809.txt  dnf_list_backup_20230809.txt  port_forwarding_to_GreatLakes.md
notes/Guides/: Find_Out_Where_Package_Installed.md  LinuxTypingFix.md  Resizing RHEL8 LVM2 Partitions.md  add_systemd_services.md
notes/LinuxAdminDiary/: 2023-03-15 - Progress.md  2023-04-14 - Installing FreeSurfer.md  2023-04-19 - Snap Issue.md  2023-07-20 - VSCode Portable Install without admin.md  2023-08-03 - KDE Crashes and System Problems.md  2023-08-04 - KDE Plasma Crashes and Fix.md  2023-08-04 - System Backups with Timeshift, Duplicity, Restric.md  2023-08-09 - Linux SoftRAID for Jangir data.md  2023-08-10 - Fix for KDE Font too large in X11 vs Wayland.md  2023-08-11 - CUDA again on Fedora 38.md  2023-08-23 - Installing Mamba.md  2023-08-23 -Issue with Interactive Basic Desktop for largemem jobs after update.md  2023-09-06 - Poetry Dependency Install Freezing.md  2023-10-18 - Fixing VMWare Kernel Modules on Newer Kernels.md  2023-11-15 - Fedora PolicyKit0 Repeated Password Prompts.md  2023-11-15 - KDE Plasma Customizations and Settings Backup.md  (+18 more)
sources/: add-timeshift-grub.sh  arc_rclone_sync.sh  general_aliases.sh  generate_treemap.py  gui_mount_cloud_drives.py  mounting_cloud_drives.sh  remote_connections_aliases.sh  source_common.sh  system_backup.py
(+8 files in other folders)
