[project]
name = "pholinuxhelpers"
version = "0.1.0"
requires-python = ">=3.11.2"
dependencies = [
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "plotly>=6.9.0",
]

[project.scripts]
generate_treemap = "generate_treemap:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["generate_treemap"]

[tool.setuptools.package-dir]
"" = "sources"
